ros2_ws/phantom_ws/log/build_2025-11-26_12-15-39/pincher_control/stderr.log
  File "/home/samsanchez/Documents/Robotics/Pincher/ros2_ws/phantom_ws/install/pincher_control/lib/python3.10/site-packages/pincher_control/control_servo.py", line 20
            PROTOCOL_VERSION = 2.0
    ^
SyntaxError: invalid non-printable character U+2006

